--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         <activity
             android:name=".MainActivity"
             android:hardwareAccelerated="true"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:exported="true"
             android:launchMode="singleTop"
             android:taskAffinity=""
