--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,10 @@ dependencies:
   http: ^1.2.2
   choice: ^2.3.2
   flutter_dotenv: ^5.2.1
-  webview_flutter: ^4.10.0
   shared_preferences: ^2.3.2
+  flutter_inappwebview: ^6.1.5
+  url_launcher: ^6.3.1
+  flutter_map: ^7.0.2
 
 dev_dependencies:
   flutter_test:
