--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   url_launcher: ^6.3.1
   flutter_map: ^7.0.2
+  wheel_picker: ^0.1.1
 
 dev_dependencies:
   flutter_test:
