--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: consultorio_medico
-description: "A new Flutter project."
+description: "Aplicación para agendar citas médicas."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -41,13 +41,22 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   http: ^1.2.2
-  choice: ^2.3.2
   flutter_dotenv: ^5.2.1
   shared_preferences: ^2.3.2
   flutter_inappwebview: ^6.1.5
   url_launcher: ^6.3.1
   flutter_map: ^7.0.2
   wheel_picker: ^0.1.1
+  pinput: ^5.0.0
+  crypto: ^3.0.6
+  internet_connection_checker_plus: ^2.5.2
+  smart_auth: ^2.0.0
+  permission_handler: ^11.3.1
+  flutter_local_notifications: ^18.0.1
+  workmanager: ^0.5.2
+  timezone: ^0.10.0
+  cloudinary: ^1.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
